# AutonomousDrone

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  mypy.ini  pytest.ini  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
compliance/: README.md
docker/: Dockerfile.dev  docker-compose.yml
docs/: Airframe-Aerodynamics.md  Autonomy-Stack.md  Bill-of-Materials.md  Communications.md  Compliance-EU-UK.md  Compliance-US.md  ConOps.md  Data-Management.md  Decision-Matrix.md  (+23 more)
software/companion/: README.md  pyproject.toml
software/companion/ros2/: README.md
software/companion/src/drone_platform/: __init__.py
software/companion/src/drone_platform/autonomy/: __init__.py  geofence.py  health_monitor.py  mission_manager.py
software/companion/src/drone_platform/autonomy/behaviors/: loiter.py  return_to_home.py  waypoint_nav.py
software/companion/src/drone_platform/cli/: main.py
software/companion/src/drone_platform/common/: logging.py  safety.py  types.py
software/companion/src/drone_platform/comms/: README.md  link_manager.py
software/companion/src/drone_platform/config/: __init__.py  default.yaml  schema.md
software/companion/src/drone_platform/fleet/: README.md  vehicle_registry.py
software/companion/src/drone_platform/mavlink/: actions.py  client.py  failsafes.py  missions.py  telemetry.py
software/companion/src/drone_platform/perception/: README.md  cameras.py
software/companion/tests/: test_config.py  test_geofence.py  test_state_machine.py
(+63 files in other folders)
