[project]
name = "drone-platform-companion"
version = "0.1.0"
description = "Companion computer stack for the autonomous drone platform."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Autonomous Drone" }]
dependencies = [
  "mavsdk==1.4.10",
  "pyyaml>=6.0.1,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "pip-audit>=2.6",
  "pytest>=7.4",
  "ruff>=0.6",
  "types-PyYAML>=6.0.12.20240808",
]

[project.scripts]
drone-platform = "drone_platform.cli.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
drone_platform = ["config/*.yaml", "config/*.md"]
